Code cleanup and documentation. TODO: Fix navbar on smaller screens (seperate mobile version?), and create tests

--- a/magic_league_ladder/static/css/style.css
+++ b/magic_league_ladder/static/css/style.css
@@ -25,7 +25,7 @@ body {
   width: 30%;
 
   padding-top: 13px;
-  margin:auto;
+  margin: 0 auto;
   margin-right: 0;
   margin-left: 0;
 
